# tobler

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  04_area_interpolate_dask.ipynb  LICENSE.txt  MANIFEST.in  README.md  api.html  apimyst.html  areal.ipynb  codecov.yml  environment.yml  genindex.html  harmonization.py  index.html  installation.html  nlcd.py  objects.inv  osnap_harmonization_use_case.ipynb  py-modindex.html  pyproject.toml  references.html  requirements.txt  requirements_docs.txt  requirements_tests.txt  search.html  searchindex.js  setup.cfg  setup.py  split_merge.ipynb  test_dasymetric.py  tobler.py  tutorial.html  versions.json
.ci/: 310.yml  311.yml  36.yml  37.yml  38.yml  39.yml
.github/workflows/: build_docs.yml  draft-pdf.yml  unittests.yml  upload_package.yml
_modules/: index.html
_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
_sources/notebooks/: 02_areal_interpolation_example.nblink.txt  03_areal_interpolation_details.nblink.txt  binary_dasymetric.nblink.txt  census_to_hexgrid.nblink.txt  extract_urban_areas.nblink.txt
_static/: documentation_options.js  references.bib
apidocs/: index.html
apidocs/tobler/: tobler.area_weighted.area_interpolate.html  tobler.area_weighted.area_interpolate_dask.html  tobler.area_weighted.area_join.html  tobler.area_weighted.html  tobler.dasymetric.html  tobler.dasymetric.masked_area_interpolate.html  tobler.dasymetric.raster_tools.html  tobler.html  tobler.model.glm.html  tobler.model.html  tobler.pycno.html  tobler.pycno.pycno.html  tobler.util.html  tobler.util.util.html
ci/: 310.yml  311-latest.yml  311-oldest.yml  311.yml  312-dev.yml  312-latest.yml  312-oldest.yml  312.yml  313-dev.yml  313-latest.yml  313.yml  314-dev.yml  314-latest.yml  314.yml
dev/: api.html  apimyst.html  genindex.html  index.html  installation.html  objects.inv  references.html  searchindex.js
dev/_sources/: installation.rst.txt  tutorial.rst.txt
dev/_static/: documentation_options.js
dev/apidocs/: index.html
dev/user-guide/: 01_interpolation_methods_overview.html  binary_dasymetric.html  census_to_hexgrid.html  extract_urban_areas.html
doc/papers/: harmonization_survery.md  references.bib  survey.md  survey.org
docs/: .buildinfo  Makefile  api.html  api.rst  apimyst.md  conf.py  genindex.html  index.html  index.rst  installation.html  myst.md  myst_summary.md  objects.inv  references.html  references.rst  search.html  searchindex.js  tutorial.html  tutorial.rst
docs/_modules/: index.html
docs/_sources/: api.rst.txt  index.rst.txt  installation.rst.txt
docs/_static/: references.bib
docs/notebooks/: 01_interpolation_methods_overview.html  01_interpolation_methods_overview.ipynb  01_interpolation_methods_overview.nblink  (+9 more)
docsrc/: api.rst  conf.py  index.rst  installation.rst  tutorial.rst
examples/: .gitignore  05_harmonizing_community_SCIPY_SPARSE_TESTS.ipynb  06065.dbf  06065.shp  06065.shx  NLCD_example.ipynb  NLCD_weights_from_regression_explained_example.ipynb  Wards.dbf  Wards.shp  Wards.shx  areal.ipynb  areal_interpolation_examples.ipynb  areal_introduction.ipynb  binning.ipynb  harmonization_function.ipynb  harmonizing_community_example.ipynb  massive_data_ridir_area_table.ipynb  precincts_interpolated.dbf  precincts_interpolated.prj  regression_vectorized_raster_example.ipynb  regression_vectorized_raster_example.ipynb.orig  regression_vectorized_raster_weights_explained_example.ipynb.orig  scanlines_example.ipynb  vectorized_raster_example.ipynb  vectorized_raster_weights_from_regression_explained_example.ipynb  weights_from_regression_explained_example.ipynb
files/: land_cover_corresp.pkl
notebooks/: 01_interpolation_methods_overview.html  01_interpolation_methods_overview.ipynb  02_areal_interpolation_example.html  02_areal_interpolation_example.ipynb  03_areal_interpolation_details.html  03_areal_interpolation_details.ipynb  04_area_interpolate_dask.html  04_area_interpolate_dask.ipynb  Untitled.ipynb  area_interpolate_perf.html  area_interpolate_perf.ipynb  areal.ipynb  binary_dasymetric.html  binary_dasymetric.ipynb  census_to_hexgrid.html  extract_urban_areas.html  extract_urban_areas.ipynb  h3fill.html  h3fill.ipynb  interpolation_methods.ipynb  precincts.ipynb  to_faces.ipynb  vectorized_raster_example.ipynb
paper/: paper.bib  paper.md
stable/: api.html  installation.html  objects.inv  py-modindex.html  tutorial.html
tobler/: __init__.py  area_weighted.py  data.py  harmonize.py  nlcd.py  scanlines_raster_interpolation.py  vectorized_raster_interpolation.py
tools/: changelog.md  changelog_0.2.0.md  changelog_0.2.1.md  changelog_0.2.2.md  changelog_0.3.0.md  gitcount.html  gitcount.ipynb
v0.13.0/: installation.html  objects.inv
v0.14.0/: .buildinfo  genindex.html  references.html  searchindex.js  sitemap.xml
working_notebooks/: NLCD_weights_from_regression_explained_example.ipynb  trying_entire_US.ipynb
(+140 files in other folders)
